<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/activity_registro"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:paddingBottom="@dimen/activity_vertical_margin"
android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
android:orientation="vertical"
    android:background="#14CCAB"
tools:context="com.ruizvilla.frontino_para_explorar.RegistroActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="!Hola nuevo oso!"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="24dp" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="352dp"
        android:layout_height="227dp"
        android:adjustViewBounds="false"
        android:src="@drawable/osofrontino1" />

    <EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/username"
    android:id="@+id/eRegUsername"/>
<EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/password"
    android:id="@+id/eRegPassword"/>
<EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/repassword"
    android:id="@+id/eRegRepPassword"/>
<EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/correo"
    android:id="@+id/eRegCorreo"/>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <Button
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/registrarse"
        android:id="@+id/bRegistrarse"/>
    <Button
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/cancelar"
        android:id="@+id/bCancelar" />
</LinearLayout>
</LinearLayout>