<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/activity_login"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:paddingBottom="@dimen/activity_vertical_margin"
android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
android:orientation="vertical"
    android:background="#14CCAB"
tools:context="com.ruizvilla.frontino_para_explorar.LoginActivity"
    android:weightSum="1">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/t3"
        android:layout_weight="0.78" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="!Unete a nuestro club!"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="24dp"
        android:textStyle="bold" />

    <EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/username"
    android:id="@+id/eUsername"/>
<EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/password"
    android:id="@+id/ePassword"/>
<Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/iniciar"
    android:id="@+id/bIniciar"/>

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/registrarse"
    android:id="@+id/tRegistrarse"/>
</LinearLayout>